update user swagger doc
